--- a/escooter/package.json
+++ b/escooter/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "json-server": "^0.17.4",
     "next": "13.5.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
